# docs/swagger.yaml
@@ -457,9 +457,14 @@ components:
       properties:
         id: 
           $ref: '#/components/schemas/Id'
-        name:
+        firstname:
           type: string
-          description: The person's full name
+          description: The person's first name
+          minLength: 3
+          maxLength: 256
+        lastname:
+          type: string
+          description: The person's last initial (or name)
           minLength: 3
           maxLength: 256
         methods:
